<resources>
    <string name="app_name">Github Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_user_name">ImtiazDipto01</string>
    <string name="demo_skln_msg">Lorem Ipsum is dummy text</string>
    <string name="search_user">Search Github user</string>
    <string name="img_search">image search</string>
    <string name="img_clear">image clear</string>
    <string name="demo_user_real_name">Imtiaz Dipto</string>
    <string name="demo_user_location">Dhaka, Bangladesh</string>
    <string name="text_public_repo">Public Repos</string>
    <string name="demo_repo_count">65</string>
    <string name="text_public_gist">Public Gists</string>
    <string name="text_followers">Followers</string>
    <string name="text_followings">Followings</string>
    <string name="user_profile">User profile</string>
    <string name="name_not_found">User name not found</string>
    <string name="location_not_found">Location not found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry_now"><u>Retry Now?</u></string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>