<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">

    <include
        android:id="@+id/layoutAppBar"
        layout="@layout/layout_toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_user"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/text_user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_user"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                tools:text="@string/demo_user_name" />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/text_user_login"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                tools:text="@string/demo_user_real_name" />

            <TextView
                android:id="@+id/text_user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/text_user_name"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                tools:text="@string/demo_user_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/layout_user_repo_info"
        layout="@layout/card_user_more_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_user_info"/>

    <include
        android:id="@+id/layout_user_follower_info"
        layout="@layout/card_user_more_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_repo_info"/>

</androidx.constraintlayout.widget.ConstraintLayout>