<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutAppBar"
        layout="@layout/layout_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.user.UsersFragment"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_serach"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:padding="2dp"
            android:src="@drawable/ic_search"
            app:tint="#000000"
            app:layout_constraintStart_toStartOf="@+id/layout_search"
            app:layout_constraintTop_toTopOf="@+id/layout_search"
            app:layout_constraintBottom_toBottomOf="@+id/layout_search"
            android:contentDescription="@string/img_search" />

        <AutoCompleteTextView
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:clickable="true"
            android:gravity="center_vertical"
            android:hint="@string/search_user"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColorHint="#52000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/img_search"
            app:layout_constraintEnd_toStartOf="@+id/searchClear"
            app:layout_constraintTop_toTopOf="@+id/layout_search"
            app:layout_constraintBottom_toBottomOf="@+id/layout_search"/>

        <ImageView
            android:id="@+id/searchClear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:tint="#555"
            android:contentDescription="@string/img_clear"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/layout_search"
            app:layout_constraintTop_toTopOf="@+id/layout_search"
            app:layout_constraintBottom_toBottomOf="@+id/layout_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_search"
            app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
            tools:listitem="@layout/item_users"
            tools:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

        <include
            android:id="@+id/layout_error"
            layout="@layout/item_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <include
            android:id="@+id/layout_bottom"
            layout="@layout/item_bottom_loading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="4dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>